Feat: Added formik and yup validation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,5 +6,9 @@
     ],
   "parserOptions": {
     "project": "./tsconfig.json"
+    },
+    "rules": {
+      "@typescript-eslint/strict-boolean-expressions": 0
     }
+  
   }
